--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ repositories {
 }
 
 
-group = 'org.example.greeting'
+group = 'org.robin.example.greeting'
 version = '1.0'
 
 pluginBundle {
@@ -35,7 +35,7 @@ pluginBundle {
 
     plugins {
         greetingsPlugin {
-            id = 'org.example.greeting'  //插件的id，到时候apply的插件id
+            id = 'org.robin.example.greeting'  //插件的id，到时候apply的插件id
             displayName = 'GreetingPlugin'
             version = '1.0'
 
